--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     // Dependency for Google Sign-In
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
+    compile 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.google.android.gms:play-services-analytics:16.0.1'
 
 }
+apply plugin: 'com.google.gms.google-services'
