--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,14 @@
 buildscript {
     
     repositories {
-        google()
         jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0-alpha15'
-        classpath 'com.google.gms:google-services:3.3.0'
+        classpath 'com.google.gms:google-services:3.2.1'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -18,8 +20,10 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
     }
 }
 
